static/css/xr-mass.css
/* ... */
.pb-4,
.py-4 {
  padding-bottom: 3rem !important;
}

.pl-4,
.px-4 {
  padding-left: 3rem !important;
}

.p-5 {
  padding: 5rem !important;
}

.pt-5,
.py-5 {
  padding-top: 5rem !important;
}

.pr-5,
.px-5 {
  padding-right: 5rem !important;
}

.pb-5,
.py-5 {
  padding-bottom: 5rem !important;
}

@media (min-width: 320px) {
    .display-1 {
        font-size: 2.25rem;
        line-height: 1;
    }

    h3 {
        font-size: 1.25rem;
    }

    .ml-sm-2 {
        margin-left: 1rem !important;
    }

    .mt-sm-2 {
        margin-top: 1rem !important;
    }

    .p-sm-0 {
      padding: 0rem !important;
    }

    .pt-sm-0,
    .py-sm-0 {
      padding-top: 0rem !important;
    }

    .pr-sm-0,
    .px-sm-0 {
      padding-right: 0rem !important;
    }

    .pb-sm-0,
    .py-sm-0 {
      padding-bottom: 0rem !important;
    }

    .pl-sm-0,
    .px-sm-0 {
      padding-left: 0rem !important;
    }

    .p-sm-1 {
      padding: 0.5rem !important;
    }

    .pt-sm-1,
    .py-sm-1 {
      padding-top: 0.5rem !important;
    }

    .pr-sm-1,
    .px-sm-1 {
      padding-right: 0.5rem !important;
    }

    .pb-sm-1,
    .py-sm-1 {
      padding-bottom: 0.5rem !important;
    }

    .pl-sm-1,
    .px-sm-1 {
      padding-left: 0.5rem !important;
    }

    .p-sm-2 {
      padding: 1rem !important;
    }

    .pt-sm-2,
    .py-sm-2 {
      padding-top: 1rem !important;
    }

    .pr-sm-2,
    .px-sm-2 {
      padding-right: 1rem !important;
    }

    .pb-sm-2,
    .py-sm-2 {
      padding-bottom: 1rem !important;
    }

    .pl-sm-2,
    .px-sm-2 {
      padding-left: 1rem !important;
    }

    .p-sm-3 {
      padding: 2rem !important;
    }

    .pt-sm-3,
    .py-sm-3 {
      padding-top: 2rem !important;
    }

    .pr-sm-3,
    .px-sm-3 {
      padding-right: 2rem !important;
    }

    .pb-sm-3,
    .py-sm-3 {
      padding-bottom: 2rem !important;
    }

    .pl-sm-3,
    .px-sm-3 {
      padding-left: 2rem !important;
    }

    .p-sm-4 {
      padding: 3rem !important;
    }

    .pt-sm-4,
    .py-sm-4 {
      padding-top: 3rem !important;
    }

    .pr-sm-4,
    .px-sm-4 {
      padding-right: 3rem !important;
    }

    .pb-sm-4,
    .py-sm-4 {
      padding-bottom: 3rem !important;
    }

    .pl-sm-4,
    .px-sm-4 {
      padding-left: 3rem !important;
    }

    .p-sm-5 {
      padding: 5rem !important;
    }

    .pt-sm-5,
    .py-sm-5 {
      padding-top: 5rem !important;
    }

    .pr-sm-5,
    .px-sm-5 {
      padding-right: 5rem !important;
    }

    .pb-sm-5,
    .py-sm-5 {
      padding-bottom: 5rem !important;
    }

    .pl-sm-5,
    .px-sm-5 {
      padding-left: 5rem !important;
    }

    .m-sm-0 {
        margin: 0 !important;
    }

    .display-4 {
        font-size: 2.25rem;
    }

    .banner-title {
        position: absolute;
        font-family: "FucXed";
        font-size: 2.25rem;
        color:white;
        padding-left: 10%;
        padding-right: 10%;
        bottom: 2.5rem;
    }

    .date-month, .date-day {
        font-size: 1.2rem;
    }

    #site-nav .navbar-nav {
        padding-top: 1.25rem;
    }

    a.nav-link {
        margin-top: 18px;
        margin-bottom: 18px;
        padding-top: 0;
        padding-bottom: 0;
    }

    a.donate-btn {
        margin-left: 0;
        margin-top: 18px;
        margin-bottom: 18px;
    }

    /*ul.navbar-nav {
        align-items: left;
    }*/
}

@media (min-width: 576px) {
    .banner-title {
        font-size: 4rem;
    }

    .banner {
        overflow: hidden;
        height: 25vw;
    }

    .banner img {
        overflow: hidden;
    }

    .site-nav {
        padding-left: 0;
        padding-right:1em;
    }
}
/* ... */

